fixed the margin spacing

--- a/public/css/documentation-style.css
+++ b/public/css/documentation-style.css
@@ -122,6 +122,7 @@ table tr th {
 	color: #fff;
 	position: fixed;
 	height: 100%;
+	margin: auto;
 	vertical-align: top;
 	overflow-y: auto;
 }
